no-jira: translation pt_BR

--- a/src/main/java/org/olat/core/gui/components/form/flexible/impl/elements/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/core/gui/components/form/flexible/impl/elements/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Tue Nov 22 14:27:55 CET 2016
+#Thu Feb 08 13:30:06 CET 2018
 confirm.delete.file=Voc\u00EA realmente deseja remover este arquivo?
 confirm.delete.file.title=Excluir arquivo
 day.short.di=Ter
@@ -27,6 +27,7 @@ month.long.mar=Mar\u00E7o
 month.long.nov=Novembro
 month.long.oct=Outubro
 month.long.sep=Setembro
+selection.no.value=Nenhum
 text.element.error.maxvalue=Valor m\u00E1ximo admiss\u00EDvel \u00E9 {0}.
 text.element.error.minvalue=Valor m\u00EDnimo admiss\u00EDvel \u00E9 {0}.
 text.element.error.notlongerthan=n\u00E3o mais que {0} caract\u00E9res permitidos.
