--- a/src/main/java/org/olat/core/util/mail/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/core/util/mail/_i18n/LocalStrings_pt_BR.properties
@@ -1,6 +1,7 @@
-#Thu Nov 23 17:41:12 CET 2017
+#Thu Feb 08 13:30:43 CET 2018
 add.email=Adicionar
 contact.cp.from=C\u00F3pia enviada ao endere\u00E7o
+error.too.long=O modelo \u00E9 muito grande. O tamanho m\u00E1ximo \u00E9 {0}\!
 footer.no.userdata=<p>Esta mensagem foi enviada automaticamente via OpenOLAT\: {0}</p>
 footer.with.userdata=<p>{2} {3} ({0}), {4} {5}</p><p>Esta mensagem foi enviada via OpenOLAT\: {1}</p>
 mail.action.emtpy=Selecione pelo menos um e-mail para realizar esta a\u00E7\u00E3o.
