--- a/src/main/java/org/olat/course/archiver/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/course/archiver/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Thu Jun 22 17:01:42 CEST 2017
+#Thu Feb 08 13:31:10 CET 2018
 checklist=Checklists
 cl=Checklists
 cmd.download=Baixar
@@ -81,6 +81,7 @@ menu.scorm.alt=Resultados SCORM
 menu.wikis=Wikis
 menu.wikis.alt=Arquivar Wikis
 nodechoose.config.error=Escolha pelo menos uma configura\u00E7\u00E3o.
+nodechoose.intro.checklist=Selecione um elemento do curso para arquivar seus checklists.
 nodechoose.intro.cl=Selecione na seguinte caixa de di\u00E1logo os Checklists que devem ser avaliados
 nodechoose.intro.config=O arquivo conter\u00E1\: todos os usu\u00E1rios, todas as perguntas, todos os itens. Altere a configura\u00E7\u00E3o de download usando o bot\u00E3o acima.
 nodechoose.intro.dialog=Selecionar um elemento de curso para arquivar file dialog. Este di\u00E1logo arquivado pode ser encontrado na sua pasta pessoal, se\u00E7\u00E3o confidencial/arquivo/[nomedocurso]/arquivo de di\u00E1logo_[f\u00F3rum_id].
