--- a/src/main/java/org/olat/course/groupsandrights/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/course/groupsandrights/_i18n/LocalStrings_pt_BR.properties
@@ -1,26 +1,20 @@
-#Fri Jul 10 15:27:01 CEST 2015
+#Thu Feb 08 13:43:33 CET 2018
 add.all=Adicionar todas as permiss\u00F5es
 bgr.archive=Ferramenta para arquivar
 bgr.assess=Ferramenta de avalia\u00E7\u00E3o
+bgr.assessmode=Modo de avalia\u00E7\u00E3o
 bgr.dbs=Banco de dados de Curso
 bgr.editor=Editor de curso
 bgr.glossary=Ferramenta do gloss\u00E1rio
 bgr.groupmngt=Grupo gestor
 bgr.membermngt=Gerenciamento de membros
 bgr.statistics=Estat\u00EDstica
-
-
-
-
-
-
-
-
-
 menu.rights=Permiss\u00F5es
 noRestriction=Sem restri\u00E7\u00E3o
 participant=Participante
 remove.all=Remover todas as permiss\u00F5es
+repo.participant=Participante do curso
+repo.tutor=Treinador do curso
 table.header.groups=Grupos
 table.header.remove=Remover
 table.header.role=Fun\u00E7\u00E3o
