--- a/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Fri Jun 23 14:37:58 CEST 2017
+#Thu Feb 08 13:44:27 CET 2018
 add.checkbox=Adicionar checkbox
 assessment=Avalia\u00E7\u00E3o
 assessment.checkbox.description=Edite por Caixa de sele\u00E7\u00E3o (checkbox)\: Aplique o filtro de caixa para editar a mesma caixa de sele\u00E7\u00E3o em todos os participantes.
@@ -19,6 +19,7 @@ column.header.homepage=Home page
 column.header.node.passed=Elemento de curso aprovado
 column.header.node.points=Pontua\u00E7\u00E3o do elemento do curso
 column.header.points=$\:box.points
+column.header.seqnum=N\u00FAmero sequencial
 comment.nocomment=$org.olat.course.nodes.ms\:comment.nocomment
 comment.title=$org.olat.course.nodes.ms\:comment.title
 condition.accessibility.title=Acesso
