--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_pt_BR.properties
@@ -1,11 +1,15 @@
-#Fri Jun 23 14:49:13 CEST 2017
-allowRelativeLinks=Permitir acesso na pasta de armazenamento
+#Thu Feb 08 14:04:04 CET 2018
 Intro.self=Clicar o bot\u00E3o "Iniciar" para executar o auto-teste.
 Intro.surv=Clicar o bot\u00E3o "Iniciar" para executar a pesquisa.
 Intro.test=Clicar o bot\u00E3o "Iniciar" para executar o teste.
+allowRelativeLinks=Permitir acesso na pasta de armazenamento
 assessment.documents.title=Documentos de avalia\u00E7\u00E3o
 attempts.nomoreattempts=Voc\u00EA n\u00E3o pode executar mais este teste
 attempts.yourattempts=N\u00FAmero de tentativas
+block.dates.start=Voc\u00EA poder\u00E1 iniciar o teste em <strong>{0}</strong>.
+block.dates.start.end=O teste pode ser iniciado entre <strong>{0}</strong> e <strong>{1}</strong>.
+button.export=Exportar resultados
+button.stats=$org.olat.ims.qti.statistics.ui\:menu.title
 changelog.title=Registro de mudan\u00E7a do recurso 
 choosenfile.self=Teste pr\u00F3prio
 choosenfile.surv=Pesquisa
@@ -45,7 +49,9 @@ disclaimer=Aviso legal
 disclaimer.file.invalid=Algumas informa\u00E7\u00F5es n\u00E3o podem ser apresentadas porque o arquivo referenciado {0} n\u00E3o est\u00E1 mais dispon\u00EDvel. Favor entre em contato com seu administrador de Curso.
 error.assessment.pulled=Seu tutor selecioneu o seu teste.
 error.assessment.stopped=Seu tutor puxou o seu teste.
+error.begin.after.end=A data de in\u00EDcio deve ser anterior \u00E0 data de t\u00E9rmino.
 error.entry.locked=O recurso did\u00E1tico selecionado \u00E9 editado atualmente por outro usu\u00E1rio. Favor selecionar algum outro recurso did\u00E1tico.
+error.reopean.failed=Reabrir o teste n\u00E3o pode ser feito
 error.resource.corrupted=O recurso did\u00E1tico n\u00E3o pode ser interpretado. Parece corrompido ou com o formato errado.
 error.self.undefined.long=Nenhum auto-teste definido para "{0}" . Escolher um.
 error.self.undefined.short=Nenhum auto-teste definido para "{0}" .
@@ -53,6 +59,10 @@ error.surv.undefined.long=Nenhuma pesquisa para "{0}" definido. Escolher um.
 error.surv.undefined.short=Nenhuma pesquisa para "{0}" definido.
 error.test.undefined.long=Nenhum teste para  "{0}" definido. Escolher um.
 error.test.undefined.short=Nenhum teste para  "{0}" definido.
+extra.time=Prolongar
+extra.time.explain.1=Prolongar o tempo para o(s) usu\u00E1rio(s) "{0}" de
+extra.time.explain.2=minutos.
+extra.time.warning=<strong>Aviso\:</strong> O tempo no modo de avalia\u00E7\u00E3o n\u00E3o ser\u00E1 prolongado. O modo de avalia\u00E7\u00E3o pode ser prolongado no modo de avalia\u00E7\u00E3o do menu.
 fieldset.allowRelativeLinksForm=Configura\u00E7\u00E3o de seguran\u00E7a
 fieldset.chosecreateeditfile=Informa\u00E7\u00E3o (arquivo HTML)
 file.name=Arquivo escolhido
@@ -125,6 +135,7 @@ qti.form.showfeedbacks=Mostrar coment\u00E1rios
 qti.form.summary=Visualizar resultados
 qti.form.summary.compact=Compacto (sem solu\u00E7\u00F5es)
 qti.form.summary.detailed=Em detalhe (com solu\u00E7\u00F5es)
+qti.form.summary.help=Se apenas o "Resumo da pergunta" for selecionado, os metadados para cada pergunta ser\u00E3o exibidos. Se "Resposta, enviada pelo participante" ou "Solu\u00E7\u00E3o" for selecionada, apenas a solu\u00E7\u00E3o ser\u00E1 exibida. O pr\u00F3prio texto da pergunta s\u00F3 \u00E9 exibido se "Pergunta, n\u00E3o respondida" for selecionada.
 qti.form.summary.metadata=Resumo do teste
 qti.form.summary.none=Sum\u00E1rio n\u00E3o necess\u00E1rio
 qti.form.summary.questions=Pergunta n\u00E3o respondida
@@ -133,7 +144,13 @@ qti.form.summary.responses=Resposta, enviada pelo participante
 qti.form.summary.section=Se\u00E7\u00E3o abstrata (sem solu\u00E7\u00F5es)
 qti.form.summary.sections=Resumo da se\u00E7\u00E3o
 qti.form.summary.solutions=Solu\u00E7\u00E3o
+qti.form.test.date=Definir per\u00EDodo de avalia\u00E7\u00E3o
+qti.form.test.date.confirm=Durante o per\u00EDodo de teste, o teste pode ser iniciado. Assim que for atingido o "tempo-limite", o teste ser\u00E1 conclu\u00EDdo automaticamente. Isso ocorre tamb\u00E9m se o limite de tempo ainda n\u00E3o for atingido.
+qti.form.test.date.help=$\:qti.form.test.date.confirm
 qti.form.test.title=Teste
+reopen=Iniciar novamente
+reopen.explanation=Este teste foi conclu\u00EDdo. Voc\u00EA pode reiniciar o teste. O participante do teste continua de onde o deixou. Se o teste for limitado a 1 tentativa, o n\u00FAmero de tentativas deve ser reiniciado para que os participantes do teste possam continuar o teste.
+reopen.test=Reabrir teste encerrado
 replace.wizard.information.empty.results=<b>NOTA\: Este teste/question\u00E1rio j\u00E1 foi lan\u00E7ado por {0} participante(s)\!</b> Todos os resultados de usu\u00E1rios j\u00E1 existentes ser\u00E3o exclu\u00EDdos clicando ao lado em "Encerrar". <br></br><b>Por favor, publique o seu curso o mais rapidamente poss\u00EDvel\!</b> Somente ap\u00F3s a publica\u00E7\u00E3o os participantes do curso ser\u00E3o capazes de lan\u00E7ar os novos testes/question\u00E1rios; qualquer resultado pode ser salvo em conformidade.
 replace.wizard.information.paragraph1=<b>NOTA\: Este teste/question\u00E1rio j\u00E1 foi lan\u00E7ado por {0} participante(s) e terminou em parte\!</b> Todos os resultados dos testes/question\u00E1rios j\u00E1 terminados ser\u00E3o arquivados e exclu\u00EDdos, clicando ao lado em "Encerrar". <br></br>Os dados arquivados podem ser baixados aqui\:
 replace.wizard.information.paragraph2=Uma c\u00F3pia deste "panorama" pode ser encontrado em sua pasta pessoal, se\u00E7\u00E3o <br><i>private/archive/{0}/{1}</i></br><b>Por favor, publique o seu curso imediatamente\!</b>Somente ap\u00F3s a publica\u00E7\u00E3o os participantes do curso poder\u00E3o lan\u00E7ar os testes/question\u00E1rio; os resultados ser\u00E3o salvos em conformidade.
@@ -144,7 +161,11 @@ replace.wizard.title=Assistente para substituir um recurso did\u00E1tico j\u00E1
 replace.wizard.title.step1=Sele\u00E7\u00E3o de um novo recurso did\u00E1tico
 replace.wizard.title.step2=Informa\u00E7\u00F5es de resultados
 replace.wizard.title.step3=Notificar usu\u00E1rios
+report.config=Relat\u00F3rio
 reporter.unavailable=$de.bps.onyx.plugin.course.nodes.iq\:reporter.unavailable
+reset.test.data.title=Resetar dados do teste
+retrieve.tests.title=$org.olat.ims.qti.statistics.ui\:menu.pull.tests.title
+retrievetest.confirm.text=$org.olat.ims.qti\:retrievetest.confirm.text
 score.cut=Valor de corte para passar
 score.max=Pontua\u00E7\u00E3o m\u00E1xima
 score.min=Pontua\u00E7\u00E3o m\u00EDnima
@@ -157,8 +178,16 @@ showResults.title=Seus resultados
 showResults.visibility=Seus resultados ser\u00E3o apresentados come\u00E7ando em "{0}" at\u00E9 "{1}"
 showResults.visibility.future=Seus resultados ser\u00E3o exibidos aqui assim que a corre\u00E7\u00E3o for conclu\u00EDda.
 start=Iniciar
+table.header.end.date=Data final
+table.header.extra.time=Extra
 table.header.lastModified=\u00DAltima modifica\u00E7\u00E3o
 table.header.results=Resultados
 time.limit.max=Limite de tempo
-validate.xml.signature=Validar recibo de teste
+time.limit.test.explain=O teste leva um m\u00E1ximo de <strong>{0}</strong>.
+tool.delete.data=Resetar todos dados
+tool.extra.time=Estender o tempo de teste
+tool.pull=Retirar teste em andamento
+warning.assessment.mode=Teste em processamento\:
+warning.assessment.mode.date={0} de {1} at\u00E9 {2}
 warning.test.with.essay=$org.olat.ims.qti.editor\:warning.test.with.essay
+warning.users.extra.time=Voc\u00EA precisa selecionar pelo menos um usu\u00E1rio que o teste possa ser prolongado.
