--- a/src/main/java/org/olat/login/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/login/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Tue Sep 05 23:26:40 CEST 2017
+#Thu Feb 08 14:08:16 CET 2018
 about.copyright=Copyright e contribui\u00E7\u00F5es
 about.date=Zurique, 8 de Fevereiro de 2011
 about.elearningjournal.test.2015=O eLearning-Journal classificou o LMS OpenOLAT com o resultado "muito bom" em uma compara\u00E7\u00E3o extensa e em testes de LMS dispon\u00EDveis no mercado. Com este grande resultado, o OpenOLAT \u00E9 avaliado como a melhor solu\u00E7\u00E3o. Como grande destaque, o OpenOLAT foi nomeado devido ao grande n\u00FAmero de recursos e ferramentas dispon\u00EDveis.
@@ -112,6 +112,7 @@ timeout.message=Sua sess\u00E3o expirou ou o servidor foi reiniciado. Para entra
 timeout.title=Timeout da sess\u00E3o
 topnav.help=Ajuda
 topnav.help.alt=Iniciar ajuda do OpenOLAT
+warning.old.browser=A vers\u00E3o do seu navegador n\u00E3o \u00E9 mais suportada. Atualize o seu navegador para garantir que o OpenOLAT possa ser executado corretamente. Para mais informa\u00E7\u00F5es, consulte o <a href\="{0}" target\="_blank">manual</a>
 wayf.homesite=Universidade
 wayf.intro=Favor selecionar sua universidade.<br><br>Voc\u00EA ser\u00E1 redirecionado para autentica\u00E7\u00E3o.
 wayf.pleasechoose=Favor selecionar sua universidade.
