--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Wed Feb 07 22:18:54 CET 2018
+#Thu Feb 08 13:13:33 CET 2018
 add=+
 add.to.list=Adicionar \u00E0 lista
 admin.configuration.title=Banco de perguntas
@@ -167,6 +167,7 @@ menu.admin.studyfields.alt=Assunto
 menu.admin.types=Tipo
 menu.admin.types.alt=Tipo
 menu.database=Meu banco de perguntas
+menu.database.alt=Meu banco de perguntas
 menu.database.favorit=Meus favoritos
 menu.database.favorit.alt=Meus Favoritos
 menu.database.my=Minhas perguntas
@@ -184,6 +185,7 @@ menu.ratings=Classifica\u00E7\u00F5es
 menu.review=Revis\u00E3o
 menu.share=Compartilhamentos p\u00FAblicos
 metadata.hide=Metadados
+metadata.show=Metadados
 metadatas=Metadados
 my.competences=Meus assuntos
 my.list=Minhas listas
@@ -198,6 +200,26 @@ pool.owners=Propriet\u00E1rios
 pool.public=P\u00FAblico
 presentation.title=Banco de perguntas
 previous=Anterior
+process.activate.locked=A quest\u00E3o est\u00E1 aberta por '{0}'. Portanto, voc\u00EA n\u00E3o pode iniciar o processo de revis\u00E3o.
+process.activate.not.reviewable.description=N\u00E3o \u00E9 poss\u00EDvel rever quest\u00F5es no formato 'QTI 1.2'. Por favor, converta a pergunta para o formato 'QTI 2.1'.
+process.activate.review=Revisar pergunta
+process.activate.review.description=A pergunta est\u00E1 no status 'Revis\u00E3o'. Por favor, reveja a quest\u00E3o com cuidado para a corre\u00E7\u00E3o t\u00E9cnica e no que diz respeito ao conte\u00FAdo. Posteriormente, voc\u00EA deve pressionar o bot\u00E3o abaixo para avaliar a quest\u00E3o.
+process.activate.start.review=Iniciar processo de revis\u00E3o
+process.activate.start.review.description=Aqui voc\u00EA pode criar a quest\u00E3o e revis\u00E1-la at\u00E9 que esteja em qualidade suficiente. Quando a quest\u00E3o for conclu\u00EDda, voc\u00EA pode iniciar o processo de avalia\u00E7\u00E3o. A quest\u00E3o n\u00E3o pode ser editada posteriormente.
+process.comment=Comente
+process.confirm.endOfLife=Se uma pergunta est\u00E1 no fim de vida, ela n\u00E3o pode mais ser usada. Voc\u00EA realmente quer definir o fim da vida para a pergunta "{0}"?
+process.endOfLife=Fim de vida
+process.final=Final
+process.rating=Classifica\u00E7\u00E3o
+process.rating.button=Classificar
+process.rating.description=Por favor, avalie a pergunta. Voc\u00EA s\u00F3 pode avaliar uma pergunta. Ap\u00F3s a avalia\u00E7\u00E3o, a quest\u00E3o n\u00E3o est\u00E1 mais na lista das quest\u00F5es para revis\u00E3o.
+process.rating.title=Revis\u00E3o
+process.review=Revis\u00E3o
+process.revision=Revis\u00E3o
+process.start.review.button=$\:process.activate.start.review
+process.start.review.description=Ap\u00F3s o in\u00EDcio do processo de revis\u00E3o, todas as classifica\u00E7\u00F5es s\u00E3o exclu\u00EDdas e a pergunta n\u00E3o pode mais ser alterada. Voc\u00EA realmente quer iniciar o processo de revis\u00E3o para a pergunta "{0}"?
+process.start.review.taxonomy.level=$\:general.taxonomy.level
+process.start.review.title=$\:process.activate.start.review
 question=An\u00E1lise de itens
 question.assessmentType=Tipo de Teste
 question.assessmentType.both=Ambos
@@ -214,32 +236,49 @@ question.type=Tipo
 question.usage=Usado em testes
 quickview=<i class\='o_icon o_icon_quickview'> </i>
 rating=Classifica\u00E7\u00E3o
+rating.creation.date=Data
+rating.empty.table=A pergunta ainda n\u00E3o foi classificada
 remove=-
 rename.collection=Renomear lista
 rights=Direitos
 rights.copyright=Copyright
 rights.creator=Propriet\u00E1rios
 rights.description=Licen\u00E7a
+rights.owners=Autores
 root.taxonomyLevel=Assuntos
 select.group=Compartilhar
 select.item=$\:details
 select.pool=Compartilhar com reservat\u00F3rio
 selected.taxonomy.tree=Taxonomia
+share.add.to.source=Adicione perguntas ao grupo "{0}"
 share.editable=Editar
 share.group=Compartilhar com grupo
 share.item=Compartilhar
+share.item.group=Compartilhe com o grupo "{0}"
+share.item.groups=Compartilhar com grupos
+share.item.pool=Compartilhe com o reservat\u00F3rio "{0}"
+share.item.pools=Compartilhe com reservat\u00F3rios
 share.options=Voc\u00EA quer permitir que outra pessoa possa editar este/estas pergunta(s)?
 share.pool=Compartilhar com reservat\u00F3rio
 shared=Compartilhados
+sharing.pools.empty.table=Esta quest\u00E3o n\u00E3o \u00E9 compartilhada em nenhum reservat\u00F3rio.
 sharing.shares=Grupos
+sharing.shares.empty.table=Esta quest\u00E3o n\u00E3o \u00E9 compartilhada com nenhum grupo.
+source.status.draft=$\:lifecycle.status.draft ({0})
+source.status.endOfLife=$\:lifecycle.status.endOfLife ({0})
+source.status.finalVersion=$\:lifecycle.status.finalVersion ({0})
+source.status.review=$\:lifecycle.status.review ({0})
+source.status.revised=$\:lifecycle.status.revised ({0})
 technical=T\u00E9cnico
 technical.creation=Criado
 technical.editor=Editor
 technical.editorVersion=Vers\u00E3o do editor
 technical.format=Formato
 technical.lastModified=\u00DAltima modifica\u00E7\u00E3o
+technical.statusLastModified=Status modificado pela \u00FAltima vez
 technics=T\u00E9cnico
 topnav.qpool=Banco de perguntas
 topnav.qpool.alt=Banco de perguntas e compartilhamentos
 unshare.item=Remover
 used=Utilizado
+warning.qpool.index.emtpy=A p\u00E1gina de informa\u00E7\u00F5es do reservat\u00F3rio de perguntas n\u00E3o foi configurada corretamente. Pergunte ao administrador do sistema para adicionar uma p\u00E1gina de informa\u00E7\u00F5es na <strong>administra\u00E7\u00E3o do reservat\u00F3rios de perguntas</strong>.
