--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_pt_BR.properties
@@ -1,9 +1,15 @@
-#Thu Apr 28 20:30:53 CEST 2016
+#Thu Feb 08 13:09:32 CET 2018
+admin.configuration.title=Banco de perguntas
 admin.levels.intro=Criar esses n\u00EDveis que se aplicam ao n\u00EDvel educacional da sua organiza\u00E7\u00E3o. Exemplos de n\u00EDveis em um contexto acad\u00EAmico poderia ser\: ensino fundamental, ensino m\u00E9dio, gradua\u00E7\u00E3o, mestrado. Dentro de um contexto corporativo, os n\u00EDveis poderia ser o seguinte\: sem aprendizagem, com forma\u00E7\u00E3o profissional, administra\u00E7\u00E3o, ger\u00EAncia m\u00E9dia, diretoria, etc...
 admin.licenses.intro=Voc\u00EA pode criar mais tipos de licen\u00E7a, se os tipos de licen\u00E7a padr\u00E3o n\u00E3o forem suficientes. Por favor, note que as licen\u00E7as padr\u00E3o n\u00E3o podem ser exclu\u00EDdas.
+admin.pool.manager.title=Administrador de \u201Creservat\u00F3rio de direitos\u201D
 admin.pools.intro=Criar um ou mais grupos de perguntas. O reservat\u00F3rio \u00E9 um banco de perguntas que permite que todos os usu\u00E1rios com direitos de autor a troquem perguntas (acesso p\u00FAblico). Voc\u00EA tamb\u00E9m pode optar por um reservat\u00F3rio com apenas um grupo selecionado de autores. Por exemplo, usu\u00E1rios de um departamento (acesso privado).
+admin.review.process.decision.type=M\u00E9todo de decis\u00E3o
+admin.review.process.title=Processo de revis\u00E3o
 admin.studyfields.intro=Assuntos, permitem a indexa\u00E7\u00E3o t\u00E9cnica de perguntas. \u00C9 organizado como uma estrutura hier\u00E1rquica para modelar potenciais programas de gradua\u00E7\u00E3o. Selecione a op\u00E7\u00E3o "$org.olat.modules.taxonomy.ui\:add.taxonomy.level", a fim de criar um novo assunto, ou selecionar um j\u00E1 existente para fins de edi\u00E7\u00E3o.
 admin.types.intro=Crie mais tipos de perguntas se os tipos existentes n\u00E3o s\u00E3o suficientes. Por favor, note que os tipos de perguntas padr\u00E3o n\u00E3o podem ser exclu\u00EDdos.
+average.rating.for.final=Classifica\u00E7\u00E3o m\u00E9dia do status "final"
+collections.enabled=Listas
 create.infos.page=Criar p\u00E1gina de informa\u00E7\u00F5es
 create.level=Criar n\u00EDvel
 create.license=Criar licen\u00E7a
@@ -12,6 +18,8 @@ delete.level=Excluir
 delete.level.confirm=Voc\u00EA realmente deseja excluir esse n\u00EDvel ?
 delete.license=Excluir
 delete.license.confirm=Voc\u00EA realmente deseja excluir essa licen\u00E7a?
+delete.qustions.without.author=Excluir perguntas quando o autor for exclu\u00EDdo
+delete.qustions.without.author.info=Quando um usu\u00E1rio \u00E9 exclu\u00EDdo, ele \u00E9 removido como autor de seus itens de pergunta. Se esta op\u00E7\u00E3o estiver habilitada e o usu\u00E1rio for o \u00FAnico autor da pergunta, o item de pergunta tamb\u00E9m ser\u00E1 exclu\u00EDdo.
 delete.taxonomyLevel=Excluir
 delete.taxonomyLevel.confirm=Voc\u00EA realmente quer excluir este assunto "{0}"?
 delete.type=Excluir
@@ -20,7 +28,12 @@ edit.info.page=Editar p\u00E1gina de informa\u00E7\u00F5es
 edit.taxonomyLevel=Editar assunto
 educational.context.deleted=Assunto foi exclu\u00EDdo com sucesso.
 educational.context.notdeleted=Assunto n\u00E3o pode ser exclu\u00EDdo, provavelmente est\u00E1 em uso.
+error.integer.positive=O n\u00FAmero precisa ser positivo
 error.item.type.unique=Um tipo de quest\u00E3o com este nome j\u00E1 existe.
+final.visibility=Visibilidade das perguntas finais
+final.visibility.manager=Gestor
+final.visibility.manager.teacher=Gestor, Professor
+import.create.subject=Criar assunto ao importar
 item.license.deleted=Licen\u00E7a foi exclu\u00EDda com sucesso.
 item.license.notdeleted=Licen\u00E7a n\u00E3o pode ser exclu\u00EDda, est\u00E1 provavelmente em uso.
 item.type.deleted=Tipo foi exclu\u00EDdo com sucesso.
@@ -30,9 +43,41 @@ level.level=N\u00EDvel
 level.translation=Tradu\u00E7\u00E3o
 license.id=ID
 license.key=Licen\u00E7a
+lower.limit=Limite inferior para decis\u00E3o positiva
+lower.limit.desc=No m\u00E9todo de avalia\u00E7\u00E3o do limite inferior, uma quest\u00E3o \u00E9 definida para o status \u201C$org.olat.modules.qpool.ui\:lifecycle.status.finalVersion\u201D quando o n\u00FAmero m\u00EDnimo de pontua\u00E7\u00E3o \u00E9 atingido e todas as pontua\u00E7\u00F5es s\u00E3o maiores ou iguais \u00E0s pontua\u00E7\u00F5es limite inferior. Se uma pontua\u00E7\u00E3o estiver abaixo do limite inferior, o status da quest\u00E3o ser\u00E1 imediatamente configurado para \u201C$org.olat.modules.qpool.ui\:lifecycle.status.revised\u201D, mesmo que o n\u00FAmero m\u00EDnimo de pontua\u00E7\u00E3o ainda n\u00E3o tenha sido alcan\u00E7ado.
+lower.limit.provider.name=Limite inferior
+number.of.ratings=N\u00FAmero de classifica\u00E7\u00F5es por quest\u00E3o
+pool.manager.allowed=O gestor do reservat\u00F3rio tem permiss\u00E3o para
+pool.manager.edit.matadata=Veja todas as perguntas e edite os metadados
+pool.manager.edit.status=alterar o status de uma pergunta
+pool.manager.educational.context=edite as configura\u00E7\u00F5es "$\:segment.educational.context"
+pool.manager.item.types=edite as configura\u00E7\u00F5es "$\:segment.item.types"
+pool.manager.licenses=edite as configura\u00E7\u00F5es "$\:segment.licenses"
+pool.manager.pools=edite as configura\u00E7\u00F5es "$\:segment.pools"
+pool.manager.review.process=edite as configura\u00E7\u00F5es "$\:segment.review.process"
+pool.manager.taxonomy=edite as configura\u00E7\u00F5es "$\:segment.taxonomy"
+pools.enabled=Reservat\u00F3rios
+reset.status=Resetar todas as perguntas para o estado "rascunho".
+review.process.confirm.enable.button=Habilitar
+review.process.confirm.enable.description=Recomenda-se que todas as perguntas em todo reservat\u00F3rio de perguntas sejam redefinidas para o status de "rascunho" para fornecer um ponto de partida consistente para o processo de avalia\u00E7\u00E3o.<br/> <br/>Se voc\u00EA redefinir os status, os status originais n\u00E3o podem ser restaurados\!
+review.process.confirm.enable.title=Ativar processo de revis\u00E3o
+review.process.enabled=Processo de revis\u00E3o
+segment.configuration=Banco de perguntas
+segment.educational.context=N\u00EDveis
 segment.info.page=P\u00E1gina de informa\u00E7\u00F5es
+segment.item.types=Tipos de perguntas
+segment.licenses=Licen\u00E7as
+segment.pools=Reservat\u00F3rios
+segment.review.process=Processo de revis\u00E3o
+segment.taxonomy=Assuntos
+selected.taxonomy.tree=Taxonomia
+shares.enabled=Grupos
+taxonomy.all=Todos assuntos
+taxonomy.competences=Assuntos com compet\u00EAncia "ensinar" ou "gerenciar"
+taxonomy.selectable=Assuntos selecion\u00E1veis
 taxonomyLevel.deleted=Assunto foi exclu\u00EDdo com sucesso.
 taxonomyLevel.notdeleted=O assunto n\u00E3o pode ser exclu\u00EDdo, provavelmente est\u00E1 em uso.
+translation=Tradu\u00E7\u00E3o
 type.key=ID
 type.translation=Tradu\u00E7\u00E3o
 type.type=Tipo
