--- a/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Mon Dec 18 21:57:53 CET 2017
+#Thu Feb 08 13:32:15 CET 2018
 QuestionItemImpl=Pergunta
 actions=A\u00E7\u00F5es
 add.competence.have=Adicionar "$\:have"
@@ -14,9 +14,11 @@ admin.configuration.title=Configura\u00E7\u00E3o de taxonomia
 admin.menu.title=Taxonomia
 admin.menu.title.alt=Taxonomia
 admin.taxonomy.trees=Taxonomias
+assign.type=Atribuir
 atleast.one.competence=Voc\u00EA deve selecionar pelo menos uma compet\u00EAncia que possa editar.
 confirm.delete.level.type.sucessfull=O tipo de n\u00EDvel "{0}" foi exclu\u00EDdo com sucesso.
 confirm.deleted.level=O n\u00EDvel "{0}" foi exclu\u00EDdo com sucesso.
+confirm.merge.level=O(s) n\u00EDvel(is) "{0}" foi mesclado com sucesso.
 confirm.removed.competence=A(s) compet\u00EAncia(s) foi removida com sucesso.
 confirmation.delete.level=Voc\u00EA realmente deseja excluir o n\u00EDvel "{0}"?
 confirmation.delete.level.title=Excluir n\u00EDvel
@@ -31,10 +33,20 @@ details.delete=Excluir
 edit.competence.title=Editar compet\u00EAncia "{1}" de "{0}"
 edit.competences=Editar compet\u00EAncias
 edit.level.types=Editar tipos
+error.delete.num=Esses n\u00EDveis de taxonomia cont\u00E9m os seguintes elementos\:
+error.delete.num.child.levels=<strong>{0}</strong> n\u00EDveis de taxonomia infantis
+error.delete.num.competences=<strong>{0}</strong> rela\u00E7\u00F5es de compet\u00EAncia
+error.delete.num.relations=<strong>{0}</strong> refer\u00EAncias para aprender objetos
+error.discontinuous.selection=N\u00E3o \u00E9 suportada a sele\u00E7\u00E3o descont\u00EDnua de n\u00EDveis taxon\u00F4micos.
+error.found.no.allowed.sub.types=N\u00E3o foi encontrado nenhum tipo de n\u00EDvel compat\u00EDvel com a sele\u00E7\u00E3o e a configura\u00E7\u00E3o dos tipos de n\u00EDvel
+error.select.target.level=Voc\u00EA precisa selecionar um n\u00EDvel de taxonomia.
 error.sort.order.integer=O n\u00FAmero de pedido precisa ser um n\u00FAmero inteiro.
+error.target.no.parent=Voc\u00EA n\u00E3o pode mover o n\u00EDvel de taxonomia para este lugar.
+error.target.not.allowed=Voc\u00EA n\u00E3o pode mover o n\u00EDvel de taxonomia para este lugar. O tipo do n\u00EDvel \u201Cpai\u201D n\u00E3o o permite.
 filter.no.level.type=Sem tipo de n\u00EDvel
 have=Possui
 info.copy.level.type.sucessfull=O tipo de n\u00EDvel "{0}" foi copiado com sucesso.
+info.delete.merge.to=Esses elementos podem ser incorporados em um outro n\u00EDvel de taxonomia.
 insert.taxonomy.levels=Insira novos n\u00EDveis de taxonomia
 level.description=Descri\u00E7\u00E3o
 level.directory.path=Caminho t\u00E9cnico
@@ -46,9 +58,14 @@ level.type=Tipo
 level.type.allowed.sub.types=Subtipos
 level.type.cssClass=Classe CSS
 level.type.docs.enabled=Documentos ativos
+level.types.to.assign=Tipos de n\u00EDvel
 level.visible=Vis\u00EDvel
 manage=Gerenciar
+merge.taxonomy.level=Mesclar
+merge.to=Mesclar
 move.taxonomy.level=Mover
+move.taxonomy.level.title=Mover "{0}"
+move.taxonomy.levels.title=Mover
 my.taxonomies=Minhas taxonomias
 not.configured=N\u00E3o configurado\! Escolha uma taxonomia na administra\u00E7\u00E3o.
 not.implemented=N\u00E3o implementado
@@ -56,6 +73,7 @@ open.taxonomy=visualizar edi\u00E7\u00E3o
 remove=Remover
 selected.taxonomy.qpool=Taxonomia para reservat\u00F3rio de perguntas
 selected.taxonomy.tree=Taxonomia para reservat\u00F3rio de documentos
+show.all=Mostrar tudo
 table.competence.empty=N\u00E3o h\u00E1 compet\u00EAncias neste n\u00EDvel da taxonomia.
 table.header.actions=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.competence.achievement=Realiza\u00E7\u00E3o
@@ -110,5 +128,8 @@ taxonomy.metadata=Metadados
 taxonomy.types=Tipos de n\u00EDveis
 teach=Ensinar
 tools=$\:table.header.actions
+type.taxonomy.level=Atribuir tipo de n\u00EDvel
+warning.atleastone.level=Voc\u00EA deve selecionar pelo menos um n\u00EDvel que voc\u00EA tenha permiss\u00E3o para editar.
+warning.atleastone.level.competence=Voc\u00EA deve escolher pelo menos um n\u00EDvel.
 warning.delete.level=O n\u00EDvel n\u00E3o pode ser exclu\u00EDdo porque ainda est\u00E1 em uso.
 warning.delete.level.type=O tipo de n\u00EDvel "{0}" n\u00E3o foi exclu\u00EDdo porque ainda est\u00E1 em uso.
