--- a/src/main/java/org/olat/admin/layout/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/admin/layout/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Tue Feb 24 13:47:27 CET 2015
+#Thu Feb 08 14:10:17 CET 2018
 CustomizingAdminController.menu.title=Customiza\u00E7\u00E3o-Layout
 CustomizingAdminController.menu.title.alt=Customize seu OLAT
 LayoutAdminControllerWithPersist.menu.title=Layout
@@ -16,6 +16,8 @@ footerLine.description=Texto na linha de rodap\u00E9 (e-mail e endere\u00E7o web
 footerUrl.default=http\://www.frentix.com
 footerUrl.description=Especificar URL de destino para o rodap\u00E9 (opcional).
 form.theme=Tema do Sistema
+form.theme.forceReload=For\u00E7ar o recarregamento de todos os recursos est\u00E1ticos
+form.theme.forceReload.help=O recarregamento for\u00E7ado s\u00F3 \u00E9 necess\u00E1rio quando um layout de sistema j\u00E1 carregado foi modificado
 invitee=Convidado
 layout.intro=Aqui voce pode experimentar os temas de layout existentes. Escolha um tema da lista. 
 layout.title=Layout
