--- a/src/main/java/org/olat/admin/security/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/admin/security/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Wed Jun 15 22:57:07 CEST 2016
+#Thu Feb 08 14:10:50 CET 2018
 admin.menu.title=Seguran\u00E7a
 admin.menu.title.alt=Altere as configura\u00E7\u00F5es de seguran\u00E7a
 sec.description=Escolha o n\u00EDvel de seguran\u00E7a de acordo com as exig\u00EAncias da sua institui\u00E7\u00E3o. Para conseguir os maiores n\u00EDveis de seguran\u00E7a, todos os recursos de seguran\u00E7a abaixo devem estar acionados
@@ -7,3 +7,4 @@ sec.title=Configura\u00E7\u00F5es de seguran\u00E7a
 sec.top.frame.explanation=Devido a raz\u00F5es de compatibilidade, o componente de texto HTML (TinyMCE) de OpenOLAT n\u00E3o pode ser incorporado em um quadro.
 sec.topframe=Impedir a incorpora\u00E7\u00E3o em quadros
 sec.wiki=Bloquear recursos wiki
+sec.xframe.sameorigin=Impedir a incorpora\u00E7\u00E3o em quadros enviando o cabe\u00E7alho HTTP X-FRAME-OPTIONS\=SAMEDOMAIN
