--- a/src/main/java/org/olat/admin/site/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/admin/site/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Thu Nov 23 17:52:28 CET 2017
+#Thu Feb 08 14:11:55 CET 2018
 AdminSiteDef=Adminsitra\u00E7\u00E3o
 CatalogAdminSiteDef=Administra\u00E7\u00E3o do Cat\u00E1logo
 CatalogSiteDef=Cat\u00E1logo
@@ -30,6 +30,7 @@ disabledSiteSecurityCallback=Inativo
 down=Para baixo
 managersSiteSecurityCallback=Gestores
 poolPrivateMembersSiteSecurityCallback=Gestores de bancos de perguntas e membros
+poolTaxonomySiteSecurityCallback=Pergunte aos administradores do banco e compet\u00EAncias
 registredOrGuestSiteSecurityCallback=Usu\u00E1rios registrados e visitantes sem convite
 registredSiteSecurityCallback=Usu\u00E1rios registrados
 restrictToAuthorSiteSecurityCallback=Autores
