--- a/src/main/java/org/olat/commons/calendar/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/commons/calendar/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Thu Nov 23 17:54:56 CET 2017
+#Thu Feb 08 14:12:17 CET 2018
 cal.add.event=Adicionar evento
 cal.add.readonly=(somente leitura)
 cal.color.choose=Escolher cor
@@ -67,6 +67,7 @@ cal.fri=Sexta
 cal.from=De
 cal.goto.event=Ir para evento selecionado
 cal.icalfeed.aggregated.info=Utilize a seguinte URL, a fim de chamar este calend\u00E1rio (incluindo todos os calend\u00E1rios agregados) a partir de outras aplica\u00E7\u00F5es. Voc\u00EA pode copiar e colar a URL em qualquer aplica\u00E7\u00E3o de calend\u00E1rio que suporte o formato iCal.
+cal.icalfeed.aggregated.title=Liga\u00E7\u00E3o de feed iCal agregado pessoal
 cal.icalfeed.aggregated.tooltip=$\:cal.icalfeed.aggregated.title
 cal.icalfeed.info=Por favor, use a seguinte URL para acessar sua agenda de outras aplica\u00E7\u00F5es. Voc\u00EA pode copiar e colar este para qualquer outra aplica\u00E7\u00E3o de suporte ao formato iCal.
 cal.icalfeed.regenerate.info=ICal Feed-Link foi regenerado.
