--- a/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,6 @@
-#Mon Dec 18 21:58:28 CET 2017
+#Thu Feb 08 13:42:52 CET 2018
+assessment.mode.now=O modo de avalia\u00E7\u00E3o est\u00E1 ativo.
+assessment.modes.overview=Modo de avalia\u00E7\u00E3o
 assessment.status.done=$org.olat.modules.assessment.ui\:assessment.status.done
 assessment.status.inProgress=$org.olat.modules.assessment.ui\:assessment.status.inProgress
 assessment.status.inReview=$org.olat.modules.assessment.ui\:assessment.status.inReview
@@ -41,11 +43,14 @@ overview=Vis\u00E3o geral
 participantgroups.title=Participantes em grupos
 previous=Anterior
 reopen=$org.olat.modules.assessment.ui\:reopen
+reset.attempts=Resetar n\u00FAmero de tentativas
+reset.attempts.explanation=Este teste terminou. Voc\u00EA pode redefinir o n\u00FAmero de tentativas. O participante deve iniciar o teste novamente desde o in\u00EDcio. Exce\u00E7\u00E3o\: se voc\u00EA j\u00E1 reabriu o teste com a fun\u00E7\u00E3o "Reabrir testes encerrados". Em seguida, o participante do teste pode continuar o teste de onde parou. <br>O n\u00FAmero de tentativas \u00E9 reiniciado para 0. Os dados das tentativas anteriores s\u00E3o armazenados independentemente da nova tentativa.
 save.done=$org.olat.modules.assessment.ui\:save.done
 statistics.small.overview=$org.olat.modules.assessment.ui\:statistics.small.overview
 sub.details=Detalhes
 table.entries=Entradas
 table.header.assessmentStatus=$org.olat.modules.assessment.ui\:table.header.assessmentStatus
+table.header.completion=$org.olat.modules.assessment.ui\:table.header.completion
 table.header.description=Descri\u00E7\u00E3o
 table.header.elements.toReview=Elementos
 table.header.group.name=Nome
@@ -59,8 +64,16 @@ table.header.numOfParticipants=$org.olat.modules.assessment.ui\:table.header.num
 table.header.numOfPassed=$org.olat.modules.assessment.ui\:table.header.numOfPassed
 table.header.passed=$org.olat.modules.assessment.ui\:table.header.passed
 table.header.scoreAverage=$org.olat.modules.assessment.ui\:table.header.scoreAverage
+table.header.tools=$org.olat.modules.assessment.ui\:table.header.tools
 table.header.userVisibility=<i class\='o_icon o_icon-fw o_icon_results_hidden'> </i>
 title.infocoach=Informa\u00E7\u00E3o sobre a avalia\u00E7\u00E3o
+tool.correction=Corre\u00E7\u00E3o
+tool.details=Mostrar detalhes / avaliar
+tool.reopen=Reabrir avalia\u00E7\u00E3o
+tool.reset.attempts=Resetar n\u00FAmero de tentativas
+tool.set.done=Definir status "feito"
+tool.set.not.visible=Definir resultados vis\u00EDveis para o usu\u00E1rio
+tool.set.visible=Definir resultados ainda n\u00E3o vis\u00EDveis para o usu\u00E1rio
 tooltip.of={0} de {1}
 user.visibility=Resultados
 user.visibility.hidden=ainda n\u00E3o vis\u00EDvel para o usu\u00E1rio
