--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Tue Sep 19 20:29:38 CEST 2017
+#Thu Feb 08 14:08:45 CET 2018
 BinderTemplate=Modelo Portfolio 2.0
 CourseModule=Curso
 EPStructuredMapTemplate=Template/modelo de Portfolio
@@ -140,6 +140,10 @@ cif.private.dates=Datas
 cif.public.dates=Semestre
 cif.requirements=Requisitos
 cif.resourcename=Nome do arquivo
+cif.resources.status=Cursos
+cif.resources.status.active=Ativo
+cif.resources.status.all=Tudo
+cif.resources.status.closed=Encerrado
 cif.softkey=OpenOLAT soft ID
 cif.type=Tipo
 cif.type.na=n/a
