OO-3180: Admin options to hide several portfolio elements

--- a/src/main/java/org/olat/portfolio/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/portfolio/ui/_i18n/LocalStrings_de.properties
@@ -2,17 +2,28 @@
 EPStructuredMapTemplate=Portfoliovorlage
 admin.menu.title=ePortfolio
 admin.menu.title.alt=ePortfolio konfigurieren
+binder.entry.point.not.available=Dieser Reiter ist deaktiviert. Bitte aktivieren Sie zuerst den Reiter, bevor Sie ihn als Ankunft in der Mappe ausw\u00e4len.
 binder.entry.point=Ankunft in Mappe
 binder.entry.point.entries=Eintr\u00E4ge
 binder.entry.point.toc=\u00DCberblick
 choose.artefact.intro=W\u00E4hlen Sie das Artefakt, welches Ihrer Sammelmappe hinzugef\u00FCgt werden soll oder f\u00FCgen Sie ein Neues hinzu.
 choose.artefact.intro.v2=W\u00E4hlen Sie aus welche Artefakte Sie vom alten Portfoliowerkzeug in das neue Portfoliomanagement importieren wollen. 
+comments.enabled=Kommentare sichtbar in
+comments.entries.enabled=$org.olat.modules.portfolio.ui\:portfolio.entries
+comments.overview.enabled=$org.olat.modules.portfolio.ui\:portfolio.overview
 create.map=Mappe erstellen
 create.map.default=Sammelmappe erstellen
 create.map.fromTemplate=Mappe aus Vorlage erstellen
 create.map.intro=W\u00E4hlen Sie die Art von Sammelmappe, welche Sie erstellen m\u00F6chten.
 create.map.selectTemplate=Vorlage ausw\u00E4hlen
 enabled=Ein
+entries.both.enabled=Tabellenansicht und Listenansicht
+entries.elements.enabled=Sichtbare Elemente
+entries.list.enabled=Listenansicht
+entries.search.enabled=Suche
+entries.table.enabled=Tabellenansicht
+entries.timeline.enabled=Zeitstrahl
+entries.view=Ansicht der Eintr\u00E4ge
 eportfolio.menu.title=ePortfolio 1.0
 eportfolio.menu.title.alt=ePortfolio mit Artefakten und Sammelmappen
 handlers.intro=W\u00E4hlen Sie die verf\u00FCgbaren Artefakt-Typen. Ausgeschaltete Artefakte werden angezeigt, k\u00F6nnen aber nicht mehr gesammelt werden.
@@ -44,6 +55,11 @@ portfolio.user.can.create.binder.course=Lernende d\u00FCrfen Mappe von Kurse ers
 portfolio.user.can.create.binder.template=Lernende d\u00FCrfen Mappe von Vorlage erstellen
 portfolio.user.create.binder=Mappe erstellen
 portfolio.v1.module.enabled=Altes ePortfolio v1 w\u00E4hrend \u00DCbergangszeit aktivieren
+section.enabled=Sichtbare Reiter
+section.disable.not.allowed=Der Reiter, der f\u00fcr die Ankunft in der Mappe vorgesehen ist, kann nicht deaktiviert werden!
+section.entries.enabled=$org.olat.modules.portfolio.ui\:portfolio.entries
+section.history.enabled=$org.olat.modules.portfolio.ui\:portfolio.history
+section.overview.enabled=$org.olat.modules.portfolio.ui\:portfolio.overview
 site.title=$\:admin.menu.title
 site.title.alt=$\:admin.menu.title
 view.mode=Ansicht\: 
