--- a/src/main/java/org/olat/portfolio/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/portfolio/ui/_i18n/LocalStrings_en.properties
@@ -2,17 +2,29 @@
 EPStructuredMapTemplate=Portfolio template
 admin.menu.title=ePortfolio
 admin.menu.title.alt=Configure ePortfolio
-binder.entry.point=landing point in binder
+binder.entry.point.not.available=This section is deactivated. Please activate the section before using it as landing page.
+binder.entry.point=Ankunft in Mappe
+binder.entry.point=Landing point in binder
 binder.entry.point.entries=Entries
 binder.entry.point.toc=Overview
 choose.artefact.intro=Please select an artefact to be added to your binder. You could also create a new one.
 choose.artefact.intro.v2=Select the artefacts you wish to import from the old portfolio module into the new portfolio management.
+comments.enabled=Comments visible in
+comments.entries.enabled=$org.olat.modules.portfolio.ui\:portfolio.entries
+comments.overview.enabled=$org.olat.modules.portfolio.ui\:portfolio.overview
 create.map=Create folder
 create.map.default=Create binder
 create.map.fromTemplate=Create folder from template
 create.map.intro=Please select the type of binder to be created
 create.map.selectTemplate=Select template
 enabled=Enabled
+entries.both.enabled=Table and List
+entries.elements.enabled=Visible elements
+entries.list.enabled=List
+entries.search.enabled=Search
+entries.table.enabled=Table
+entries.timeline.enabled=Timeline
+entries.view=View if the entries
 eportfolio.menu.title=ePortfolio 1.0
 eportfolio.menu.title.alt=ePortfolio along with artefacts and binders
 handlers.intro=Please select all available artefact types. Deactivated artefacts will be displayed; however, you can no longer collect them.
@@ -44,6 +56,11 @@ portfolio.user.can.create.binder.course=Learner are allowed to create binders fr
 portfolio.user.can.create.binder.template=Learner are allowed to create binders from a template
 portfolio.user.create.binder=Create binders
 portfolio.v1.module.enabled=Enable legacy ePortfolio v1 during transition period
+section.enabled=Visible sections
+section.disable.not.allowed=This section cannot be deactivated. It is selected as the landing page!
+section.entries.enabled=$org.olat.modules.portfolio.ui\:portfolio.entries
+section.history.enabled=$org.olat.modules.portfolio.ui\:portfolio.history
+section.overview.enabled=$org.olat.modules.portfolio.ui\:portfolio.overview
 site.title=$\:admin.menu.title
 site.title.alt=$\:admin.menu.title
 view.mode=View\:
