--- a/src/main/java/org/olat/core/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/core/_i18n/LocalStrings_fr.properties
@@ -30,6 +30,7 @@ form.dirty.ignore=Si vous appuyez sur le bouton <strong>$\:form.dirty.button.ign
 form.dirty.intro=Attention\! Le formulaire contient encore des donn\u00E9es que vous n'avez pas enregistr\u00E9es.
 form.dirty.title=Donn\u00E9es non-enregistr\u00E9es
 form.error.nointeger=Nombre invalide. Il faut indiquer un nombre.
+form.error.toolong=Votre saisie est trop longue. Vous avez au maximum {0} caract\u00E8res \u00E0 disposition.
 form.general.error=Des erreurs de saisie sont survenues. Suivez les indications relatives aux champs, svp.
 form.legende.mandatory=<i>Veuillez remplir ce champ.</i>
 form.legende.wikiMarkup=<i>Ce champ peut \u00EAtre format\u00E9 \u00E0 l'aide des balises Wiki.</i> </br >*<b>bold</b>*<br>_<i>italic</i>_<br>* Liste d'\u00E9l\u00E9ments
