no-jira: Wording

--- a/src/main/java/org/olat/commons/calendar/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/commons/calendar/_i18n/LocalStrings_de.properties
@@ -142,7 +142,7 @@ cal.sun=Sonntag
 cal.synchronize.personal.type.url.desc=$\:cal.synchronize.type.url.desc
 cal.synchronize.type.url=Kalender via URL importieren
 cal.synchronize.type.url.desc=Kalender via URL importieren
-cal.synchronize.type.url.error=Kalender konnte nicht synchroniziert werden
+cal.synchronize.type.url.error=Kalender konnte nicht synchronisiert werden
 cal.thisweek=Heute
 cal.thu=Donnerstag
 cal.to=Bis
@@ -153,7 +153,7 @@ cal.wed=Mittwoch
 cal.week=Woche
 cal.week.label=Woche
 calendar.admin=Kalenderkonfiguration
-calendar.admin.description=Hier k\u00F6nnen Sie den Kalender an oder abschalten.
+calendar.admin.description=Hier k\u00F6nnen Sie den Kalender ein- oder ausschalten.
 calendar.enable=Kalender einschalten
 calendar.enable.course.element=Kursbaustein einschalten
 calendar.enable.course.tool=Kurswerkzeug einschalten
