--- a/src/main/java/org/olat/commons/calendar/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/commons/calendar/_i18n/LocalStrings_en.properties
@@ -153,7 +153,7 @@ cal.wed=Wednesday
 cal.week=Week
 cal.week.label=Week
 calendar.admin=Calendar configuration
-calendar.admin.description=Enable or disable the calendar hier.
+calendar.admin.description=Enable or disable the calendar here.
 calendar.enable=Enable calendar
 calendar.enable.course.element=Enable course element
 calendar.enable.course.tool=Enable course tool
