--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -127,16 +127,16 @@ item.numbers.of={0} / {1}
 item.pooled=Frage {0} wurde zum Pool hinzugef\u00FCgt.
 item.shared=Frage {0} wurde freigegeben.
 item.type.drawing=Zeichnen
-item.type.essay=Essay
-item.type.fib=Fill-in-Blank
+item.type.essay=Freitext
+item.type.fib=L\u00FCckentext
 item.type.hotspot=Hotspot
 item.type.hottext=Hottext
-item.type.kprim=KPrim
+item.type.kprim=Kprim
 item.type.match=Matrix
+item.type.mc=Multiple Choice
 item.type.matchdraganddrop=Drag and Drop
-item.type.mc=Multiple-Choice
-item.type.numerical=Numerische Eingabe
-item.type.sc=Single-Choice
+item.type.matchtruefalse=True/false
+item.type.sc=Single Choice
 item.type.unkown=Unbekannt
 item.type.upload=Datei hochladen
 lifecycle.status=Status
