--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_de.properties
@@ -18,6 +18,7 @@ archive.table.header.node.points=Kursbaustein Punkte
 archive.table.header.points=$\:table.header.score
 archive.table.header.test=Test
 assessment.comment.legend=Pers\u00F6nliche Notizen
+assessment.comment.legend.help=Sie k\u00F6nnen ein Kommentar hier schreiebn. Diese Notizen sind privat und werden nicht in einem Pr\u00FCfung ber\u00FCcksichtigt.
 assessment.item.mark=F\u00FCgen Sie eine private Markierung hinzu als Erinnerung um diese Frage sp\u00E4ter noch einmal anzuschauen 
 assessment.item.status.answered=Beantwortet
 assessment.item.status.finished=Erledigt
