OO-3338: add section with their score in the Excel export for QTI 2.1

--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_de.properties
@@ -16,6 +16,7 @@ archive.table.header.node=Kurs
 archive.table.header.node.passed=Kursbaustein bestanden
 archive.table.header.node.points=Kursbaustein Punkte
 archive.table.header.points=$\:table.header.score
+archive.table.header.section=Sektion "{0}"
 archive.table.header.test=Test
 assessment.comment.legend=Pers\u00F6nliche Notizen
 assessment.comment.legend.help=Sie k\u00F6nnen ein Kommentar hier schreiebn. Diese Notizen sind privat und werden nicht in einem Pr\u00FCfung ber\u00FCcksichtigt.
