--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_fr.properties
@@ -16,6 +16,7 @@ archive.table.header.node=Cours
 archive.table.header.node.passed=Element de cours r\u00E9ussi
 archive.table.header.node.points=Points \u00E9l\u00E9ment de cours
 archive.table.header.points=$\:table.header.score
+archive.table.header.section=Sektion "{0}"
 archive.table.header.test=Test
 assessment.comment.legend=Notes personelles
 assessment.comment.legend.help=Vous pouvez ajoutez un commentaire dans le champ de texte ci-dessous. Cette note est priv\u00E9e et il n'en sera pas tenu compte dans un test.
