--- a/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_fr.properties
@@ -315,6 +315,7 @@ uploaded.by=t\u00E9l\u00E9charg\u00E9 par {0}
 user.visibility=$org.olat.course.assessment.ui.tool\:user.visibility
 user.visibility.hidden=$org.olat.course.assessment.ui.tool\:user.visibility.hidden
 user.visibility.visible=$org.olat.course.assessment.ui.tool\:user.visibility.visible
+user.visibility.visible.tooltip=$org.olat.course.assessment.ui.tool\:user.visibility.visible.tooltip
 wait.for.solutions=Les solutions mod\u00E8les seront visible apr\u00E8s l'heure sp\u00E9cifi\u00E9e.
 warning.group.pick.task=Ceci est un devoir de groupe\! La s\u00E9lection effectu\u00E9e ici s'applique \u00E0 tous les participants du groupe "{0}"\! Assurez-vous que votre choix \u00E0 \u00E9t\u00E9 discut\u00E9 au sein de votre groupe\! Seul un participant du groupe pour choisir un devoir.
 warning.group.submit=Ceci est un devoir de groupe\! Les documents soumis le sont pour tous les participants du groupe "{0}"\! Assurez-vous que les solutions ont \u00E9t\u00E9 discut\u00E9es au sein du groupe\! Un seul membre du groupe peut soumettre la solution d\u00E9finitive.
