--- a/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_it.properties
+++ b/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_it.properties
@@ -264,6 +264,7 @@ uploaded.by=caricato da {0}
 user.visibility=$org.olat.course.assessment.ui.tool\:user.visibility
 user.visibility.hidden=$org.olat.course.assessment.ui.tool\:user.visibility.hidden
 user.visibility.visible=$org.olat.course.assessment.ui.tool\:user.visibility.visible
+user.visibility.visible.tooltip=$org.olat.course.assessment.ui.tool\:user.visibility.visible.tooltip
 wait.for.solutions=I modelli di soluzione saranno visibili alla data sopra indicata.
 warning.group.pick.task=Questo \u00E8 un compito di gruppo\! Le selezioni effettuate saranno valide per tutti i membri del gruppo "{0}"\! Assicurati di aver discusso questa scelta all'interno del gruppo prima di selezionare il compito\! Solo un membro del gruppo pu\u00F2 selezionare il compito per tutti.
 warning.group.submit=Questo \u00E8 un compito di gruppo\! Il documento consegnato sar\u00E0 valido per tutti i membri del gruppo "{0}"\! Assicurati di aver discusso questa soluzione all'interno del gruppo prima di consegnarla\! Solo un membro del gruppo pu\u00F2 consegnare la soluzione a nome di tutti i membri.
