--- a/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_pt_BR.properties
@@ -315,6 +315,7 @@ uploaded.by=enviado por
 user.visibility=$org.olat.course.assessment.ui.tool\:user.visibility
 user.visibility.hidden=$org.olat.course.assessment.ui.tool\:user.visibility.hidden
 user.visibility.visible=$org.olat.course.assessment.ui.tool\:user.visibility.visible
+user.visibility.visible.tooltip=$org.olat.course.assessment.ui.tool\:user.visibility.visible.tooltip
 wait.for.solutions=A solu\u00E7\u00E3o de amostra ser\u00E1 exibida na data especificada acima.
 warning.group.pick.task=Esta \u00E9 uma tarefa de grupo\! A sele\u00E7\u00E3o feita aqui \u00E9 v\u00E1lida para todos os membros do grupo "{0}"\! Certifique-se de que voc\u00EA discutiu essa sele\u00E7\u00E3o dentro do grupo antes de selecionar uma tarefa\! Apenas um membro do grupo pode selecionar a tarefa para o grupo.
 warning.group.submit=Esta \u00E9 uma tarefa de grupo\! O documento apresentado \u00E9 v\u00E1lido para todos os membros do grupo "{0}"\! Certifique-se de que voc\u00EA discutiu a solu\u00E7\u00E3o neste documento antes de envi\u00E1-lo aqui\! Apenas um membro do grupo pode apresentar uma solu\u00E7\u00E3o em nome de todos os membros do grupo.
