OO-3349: add a special i18n separator between 2 full name of teachers

--- a/src/main/java/org/olat/core/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/core/_i18n/LocalStrings_fr.properties
@@ -110,6 +110,7 @@ toolbox.tools=Outils
 top=vers le haut
 top.alt=Vers le d\u00E9but de la page
 user.guest=invit\u00E9
+user.fullname.separator=/
 warn.beta.feature=Attention\! Cette fonction se trouve dans la phase d'essai. Veuillez noter que des erreurs peuvent appara\u00EEtre si cette fonction est utilis\u00E9e.
 warn.header=Attention
 warn.notdispatched=Cette page a \u00E9t\u00E9 modifi\u00E9e. Veuillez tenir compte d'\u00E9ventuels messages.
