--- a/src/main/java/org/olat/core/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/core/_i18n/LocalStrings_en.properties
@@ -110,6 +110,7 @@ toolbox.tools=Tools
 top=Go to top
 top.alt=Go to top of page
 user.guest=Guest
+user.fullname.separator=/
 warn.beta.feature=Attention\! This is a beta feature. Be aware that using this feature might result in unexpected behavior.
 warn.header=Warning
 warn.notdispatched=This page has been modified. Please consider any new messages.
