no-jira: translation pt_BR

--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Thu Feb 08 14:04:04 CET 2018
+#Wed Feb 28 13:30:52 CET 2018
 Intro.self=Clicar o bot\u00E3o "Iniciar" para executar o auto-teste.
 Intro.surv=Clicar o bot\u00E3o "Iniciar" para executar a pesquisa.
 Intro.test=Clicar o bot\u00E3o "Iniciar" para executar o teste.
@@ -187,6 +187,7 @@ time.limit.test.explain=O teste leva um m\u00E1ximo de <strong>{0}</strong>.
 tool.delete.data=Resetar todos dados
 tool.extra.time=Estender o tempo de teste
 tool.pull=Retirar teste em andamento
+validate.xml.signature=Validar recibo de teste
 warning.assessment.mode=Teste em processamento\:
 warning.assessment.mode.date={0} de {1} at\u00E9 {2}
 warning.test.with.essay=$org.olat.ims.qti.editor\:warning.test.with.essay
