--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Thu Feb 08 13:13:33 CET 2018
+#Wed Feb 28 13:29:43 CET 2018
 add=+
 add.to.list=Adicionar \u00E0 lista
 admin.configuration.title=Banco de perguntas
@@ -135,6 +135,7 @@ item.type.hottext=Hottext
 item.type.kprim=KPrim
 item.type.match=Combine
 item.type.matchdraganddrop=Arraste e solte
+item.type.matchtruefalse=Verdadeiro/Falso
 item.type.mc=Escolha M\u00FAltipla
 item.type.numerical=Entrada num\u00E9rica
 item.type.sc=Escolha \u00FAnica
