--- a/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/modules/taxonomy/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Thu Feb 08 13:32:15 CET 2018
+#Wed Feb 28 13:30:37 CET 2018
 QuestionItemImpl=Pergunta
 actions=A\u00E7\u00F5es
 add.competence.have=Adicionar "$\:have"
@@ -133,3 +133,5 @@ warning.atleastone.level=Voc\u00EA deve selecionar pelo menos um n\u00EDvel que 
 warning.atleastone.level.competence=Voc\u00EA deve escolher pelo menos um n\u00EDvel.
 warning.delete.level=O n\u00EDvel n\u00E3o pode ser exclu\u00EDdo porque ainda est\u00E1 em uso.
 warning.delete.level.type=O tipo de n\u00EDvel "{0}" n\u00E3o foi exclu\u00EDdo porque ainda est\u00E1 em uso.
+warning.taxonomy.level.deleted=Esse n\u00EDvel de taxonomia n\u00E3o est\u00E1 mais dispon\u00EDvel
+warning.taxonomy.level.type.deleted=Esse tipo de n\u00EDvel n\u00E3o est\u00E1 mais dispon\u00EDvel.
